# dataclassish

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  noxfile.py  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml  labeler.yml
docs/: conf.py  index.md
src/dataclassish/: __init__.py  _core.py  _ext.py  converters.py  flags.py
src/dataclassish/_src/: __init__.py  api.py  converters.py  core.py  ext.py  flag_compat.py  flags.py  register_base.py  register_copyreplace.py  register_dataclass.py  register_mapping.py  types.py
src/dataclasstools/: __init__.py  _core.py  _ext.py
tests/: test_converters.py  test_package.py
