[project]
authors = [
  { name = "Nathaniel Starkman", email = "nstarman@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = ["plum-dispatch>=2.5.1", "typing_extensions>=4.12.2"]
description = "dataclass tools, extended by multiple dispatch"
dynamic = ["version"]
license.file = "LICENSE"
name = "dataclassish"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
"Bug Tracker" = "https://github.com/GalacticDynamics/dataclassish/issues"
Changelog     = "https://github.com/GalacticDynamics/dataclassish/releases"
Discussions   = "https://github.com/GalacticDynamics/dataclassish/discussions"
Homepage      = "https://github.com/GalacticDynamics/dataclassish"


[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling", "hatch-vcs"]


[dependency-groups]
build = ["build>=1.3.0"]
dev = [
  "cz-conventional-gitmoji>=0.6.1",
  { "include-group" = "build" },
  { "include-group" = "lint" },
  { "include-group" = "nox" },
  { "include-group" = "test" },
]
lint = ["mypy>=1.19.0", "pre-commit>=4.5.0", "pylint>=4.0.4"]
nox = ["nox>=2024.10.9", "nox-uv>=0.6.3"]
test = [
  "attrs>=25.4.0",
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "sybil[pytest]>=9.2.0",
]

[tool.hatch]
build.hooks.vcs.version-file = "src/dataclassish/_version.py"
build.hooks.vcs.version-file-template = """\
version: str = {version!r}
version_tuple: tuple[int, int, int] | tuple[int, int, int, str, str]
version_tuple = {version_tuple!r}
"""
version.source = "vcs"


[tool.codespell]
skip = ["uv.lock"]


[tool.commitizen]
name = "cz_gitmoji"


[tool.coverage]
report.exclude_also = ['\.\.\.', 'if TYPE_CHECKING:']
run.source          = ["dataclassish"]


[tool.mypy]
disallow_incomplete_defs = false
disallow_untyped_defs    = false
enable_error_code        = ["ignore-without-code", "redundant-expr", "truthy-bool"]
files                    = ["src"]
python_version           = "3.11"
strict                   = true
warn_unreachable         = true
warn_unused_configs      = true

[[tool.mypy.overrides]]
disallow_incomplete_defs = true
disallow_untyped_defs    = true
module                   = "dataclassish.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module                 = ["plum.*"]


[tool.pylint]
disable = [
  "fixme",
  "function-redefined",     # incompatible with plum-dispatch
  "line-too-long",          # handled by ruff
  "no-member",              # handled by mypy
  "too-few-public-methods", # Protocols
  "too-many-function-args", # incompatible with plum-dispatch
  "unused-argument",        # handled by ruff
]
ignore-paths = [".*/_version.py"]
py-version = "3.11"
reports.output-format = "colorized"
similarities.ignore-imports = "yes"


[tool.pytest.ini_options]
addopts        = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
filterwarnings = ["error"]
log_cli_level  = "INFO"
minversion     = "8.0"
testpaths      = ["README.md", "src", "tests"]
xfail_strict   = true


[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
  "ANN401",  # Dynamically typed expressions are disallowed in `**kwargs`
  "COM812",  # For ruff.format
  "D203",    # 1 blank line required before class docstring
  "D213",    # Multi-line docstring summary should start at the first line
  "F811",    # Redefinition of unused '...'  (for plum-dispatch)
  "FIX002",  # Line contains TODO
  "ISC001",  # Conflicts with formatter
  "PLR09",   # Too many <...>
  "PLR2004", # Magic value used in comparison
  "RUF022",  # `__all__` is not sorted
  "TD002",   # Missing author in TODO
  "TD003",   # Missing issue link on the line following this TODO
]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["INP001"]
"noxfile.py"   = ["T20"]
"tests/**"     = ["ANN", "S101", "T20"]

[tool.ruff.lint.isort]
combine-as-imports     = true
extra-standard-library = ["typing_extensions"]
